--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "axios": "^0.21.1",
+    "http-proxy-middleware": "^1.0.6",
+    "netlify-cli": "^2.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
@@ -13,7 +16,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start:lambda": "netlify-lambda serve functions",
+    "build": "run-p build:**",
+    "build:app": "react-scripts build",
+    "build:lambda": "netlify-lambda build functions",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,6 +28,11 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "devDependencies": {
+    "netlify-cli": "^2.19.0",
+    "netlify-lambda": "^2.0.3",
+    "npm-run-all": "^4.1.5"
   },
   "browserslist": {
     "production": [
