--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.1",
+    "faunadb": "^2.13.1",
     "http-proxy-middleware": "^1.0.6",
-    "netlify-cli": "^2.19.0",
     "react": "^17.0.1",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
@@ -30,7 +33,7 @@
     ]
   },
   "devDependencies": {
-    "netlify-cli": "^2.19.0",
+    "netlify-cli": "^2.71.0",
     "netlify-lambda": "^2.0.3",
     "npm-run-all": "^4.1.5"
   },
