--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "analytics": "^0.3.5",
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
+    "encoding": "^0.1.13",
     "express-session": "^1.17.1",
     "faunadb": "^2.13.1",
     "firebase": "^7.19.1",
